2003-11-19  Ettore Perazzoli  <ettore@ximian.com>

	* e-component-registry.c (component_info_free): Free
	->uri_schemas.
	(set_schemas): New function to get the list of URI schemas given a
	component's ServerInfo.
	(query_components): Call it.

	* e-component-registry.h (struct _EComponentInfo): Add
	"uri_schemas" member.

	* Evolution-Component.idl (Component.handleURI): New method.

2003-11-19  Ettore Perazzoli  <ettore@ximian.com>

	* evolution-activity-client.c
	(evolution_activity_client_construct): Get a raw
	GNOME_Evolution_Shell as an arg instead of an
	EvolutionShellClient.
	(get_shell_activity_iface): New helper function.
	(evolution_activity_client_construct): Use it.

2003-11-19  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c (impl_dispose): Destroy the tooltips instead of
	unreffing them.

	* e-shell.c (struct _EShellPrivate): New member activity_handler.
	(setup_activity_interface): New.
	(impl_dispose): Add a comment about why we must not unref
	activity_handler here.
	(create_window): Attach the task bar to the new window.

	* e-shell-window.c (e_shell_window_peek_task_bar): New.

	* e-activity-handler.c: Add back.
	* e-activity-handler.h: Add back.

2003-11-19  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c (struct _EShellWindowPrivate): New members
	status_bar, offline_toggle, offline_toggle_image, menu_hint_label,
	task_bar, tooltips.
	(init): Initialize ->tooltips.
	(impl_dispose): Unref ->tooltips.
	(offline_toggle_clicked_callback): New.
	(e_shell_window_new): Connect shell_line_status_changed_callback()
	to the shell's "line_status_changed" signal.
	(shell_line_status_changed_cb): New.
	(setup_offline_toggle): New.
	(setup_menu_hint_label): New.
	(setup_task_bar): New.
	(setup_status_bar): New.
	(setup_widgets): Call setup_status_bar() and add add the status
	bar to the window.
	(update_offline_toggle_status): New.
	(update_send_receive_sensitivity): New.
	(load_icons): New.
	(class_init): Call load_icons().