@@ -1,3 +1,14 @@
+2003-11-20  Ettore Perazzoli  <ettore@ximian.com>
+
+	* e-shell.c (impl_Shell_handleURI): Reimplemented using
+	EComponentRegistry.
+
+	* main.c (idle_cb): Create a new window even if we have a URI
+	list.
+
+	* e-component-registry.c
+	(e_component_registry_peek_info_for_uri_schema): New.
+
 2003-11-19  Ettore Perazzoli  <ettore@ximian.com>
 
 	* e-component-registry.c (component_info_free): Free
